# Recommendation_systems

./: .gitignore  main.py  project_book_semantic_search.ipynb  pyproject.toml  semantic_recommendation_system_for_science_fiction_movies.ipynb  test.ipynb
